<resources>
    <string name="app_name">AcaraanBarengApps</string>
    <string name="title">Title</string>
    <string name="description">Snippet Description</string>
    <string name="title_saved">Saved</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullName">Full Name</string>
    <string name="location">Location</string>
    <string name="title_success">Success</string>
    <string name="title_failed">Failed</string>
    <string name="total_success">0</string>
    <string name="total_failed">0</string>
    <string name="subTitle">Finding events and holidays together without loneliness!</string>
    <string name="greetings">Acaraan Bareng Apps</string>
    <string name="gender1">Laki-laki</string>
    <string name="gender2">Perempuan</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="title_total">Total</string>
    <string name="phone">Phone</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="informationData">Sorry, we don\'t have the event you want to show yet. You can create your own events.</string>
</resources>