<?xml version="1.0" encoding="utf-8"?>

<!--10 Mei 2022-->
<!--10119197-->
<!--Mochamad Nurkhayal Kadafi-->
<!--IF-5-->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:iconTint="@drawable/bottom_navigation_selector"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.mnkadafi.acaraanbarengapps.ui.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mnkadafi.acaraanbarengapps.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mnkadafi.acaraanbarengapps.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>