<?xml version="1.0" encoding="utf-8"?>

<!--Tanggal 4 Agustus 2022-->
<!--NIM  : 10119197-->
<!--Nama : Mochamad Nurkhayal Kadafi-->
<!--Kelas: IF-5-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/rounded_background_event">

    <ImageView
        android:id="@+id/ivEvent"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/blank_img"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:background="@drawable/round_outline"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorCoolGrey" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/title"
        android:textSize="20dp"
        android:fontFamily="@font/nunito_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            android:fontFamily="@font/rubik_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="15dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/rubik_regular"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="15dp"
            android:fontFamily="@font/rubik_regular"/>
    </LinearLayout>

</LinearLayout>