<?xml version="1.0" encoding="utf-8"?>

<!--Tanggal 4 Agustus 2022-->
<!--NIM  : 10119197-->
<!--Nama : Mochamad Nurkhayal Kadafi-->
<!--Kelas: IF-5-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_baseline_logout_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:layout_centerVertical="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/rubik_regular" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvTotalEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_success"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/nunito_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_total"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/rubik_regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvTotalSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_failed"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/nunito_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_success"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/rubik_regular" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recent Event"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="@font/nunito_bold" />

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_history"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>