<?xml version="1.0" encoding="utf-8"?>

<!--Tanggal 4 Agustus 2022-->
<!--NIM  : 10119197-->
<!--Nama : Mochamad Nurkhayal Kadafi-->
<!--Kelas: IF-5-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:id="@+id/btnDetail"
    android:background="@drawable/rounded_background_event">

    <ImageView
        android:id="@+id/ivHistory"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/blank_img"
        android:layout_margin="15dp"
        android:clipToOutline="true"
        android:background="@drawable/round_outline"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:maxLines="2"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:maxLines="2"
            android:layout_marginRight="15dp"
            android:textSize="15dp"
            android:fontFamily="@font/rubik_regular"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:maxLines="2"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="13dp"
            android:fontFamily="@font/rubik_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnParticipant"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text=" "
                android:background="@drawable/ic_baseline_people_alt_24"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:text=" "
                android:background="@drawable/ic_baseline_edit_24"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:text=" "
                android:background="@drawable/ic_baseline_delete_24"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>